--- a/monument_lab_starter/index.html
+++ b/monument_lab_starter/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Monument | Home</title>
 	<!-- Link for FontAwesome has already been added! -->
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -9,7 +10,11 @@
 
 </head>
 <body>
-
+	<div class="wrapper">
+	<button id=arrowbutton>
+		<a id="arrows" href="#">
+			<i class="fas fa-angle-double-down fa-3x"></i>
+	</button>
 	<nav>
 		<a href="#">About</a>
 		<a href="#">Gallery</a>
@@ -77,8 +82,9 @@
 <h3>A visual guide to the Southwest</h3>
 
 <div class="gallery">
-	<div><img src="images/gallery_1.jpg" alt="">
-				<img src="images/gallery_3.jpg" alt="">
+	<div>
+		<img src="images/gallery_1.jpg" alt="">
+		<img src="images/gallery_3.jpg" alt="">
 	</div>
 	<div>
 		<img src="images/gallery_4.jpg" alt="">
@@ -106,8 +112,8 @@
 
 		<hr>
 
-		<p>&copy;2016 <a class="specialfoot"href="#">Sarah Holden</a></p>
+		<a class="specialfoot"href="#">&copy;2016 Sarah Holden</a>
 	</footer>
-
+</div>
 </body>
 </html>
