--- a/monument_lab_starter/index.html
+++ b/monument_lab_starter/index.html
@@ -13,7 +13,8 @@
 	<div class="wrapper">
 	<button id=arrowbutton>
 		<a id="arrows" href="#">
-			<i class="fas fa-angle-double-down fa-3x"></i>
+			<i class="fas fa-angle-double-down fa-3x">
+			</i></a>
 	</button>
 	<nav>
 		<a href="#">About</a>
