--- a/final_project/chesswebsite/index.html
+++ b/final_project/chesswebsite/index.html
@@ -26,17 +26,22 @@
     <header>
       <h1><a href="index.html">Chess America</a></h1>
     </header>
-    <nav>
-      <a href="about.html">About Us</a>
-      <a href="teacher.html">Teacher Application</a>
-      <a href="contact.html">Contact</a>
-      <a href="register.html">Register Now</a>
-    </nav>
+    <div id="arrowbutton"><i class="fas fa-align-justify fa-3x"></i></div>
+    <div class="bigNav">
+      <nav>
+        <a href="about.html">About Us</a>
+        <a href="teacher.html">Teacher Application</a>
+        <a href="contact.html">Contact</a>
+        <a href="register.html">Register Now</a>
+      </nav>
+    </div>
+
     <div class="container1">
 
         <h4>Click on your school below to register!</h4>
         <h4>All Major Credit/Debit Cards Accepted</h4>
-
+        <h2>SOLD OUT classes have no remaining seats. There is no waiting list. We look forward to seeing you next semester.</h2>
+<br>
     <div class="registrationgrid">
       <div class="border">
         <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
@@ -273,7 +278,10 @@
     </div>
     </div>
     <footer>
+      <p>Chess America &copy; 2018</p>
     </footer>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
+	<script src="js/main.js"></script>
 </body>
 </html>
