--- a/final_project/chesswebsite/register.html
+++ b/final_project/chesswebsite/register.html
@@ -26,17 +26,22 @@
     <header>
       <h1><a href="index.html">Chess America</a></h1>
     </header>
-    <nav>
-      <a href="about.html">About Us</a>
-      <a href="teacher.html">Teacher Application</a>
-      <a href="contact.html">Contact</a>
-      <a href="register.html">Register Now</a>
-    </nav>
+    <div id="arrowbutton"><i class="fas fa-align-justify fa-3x"></i></div>
+    <div class="bigNav">
+      <nav>
+        <a href="about.html">About Us</a>
+        <a href="teacher.html">Teacher Application</a>
+        <a href="contact.html">Contact</a>
+        <a href="register.html">Register Now</a>
+      </nav>
+    </div>
+
     <div class="container1">
 
         <h4>Click on your school below to register!</h4>
         <h4>All Major Credit/Debit Cards Accepted</h4>
-
+        <h2>SOLD OUT classes have no remaining seats. There is no waiting list. We look forward to seeing you next semester.</h2>
+<br>
     <div class="registrationgrid">
       <div class="border">
         <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
@@ -201,9 +206,7 @@
       </div>
 
       <div class="schedule">
-        <h3>Mondays 3:15-4:15 p.m. - 12 weeks | Feb. 5, 12, 26, Mar. 5, 12, 19, 26, Apr. 16 23, 30, May 7, 14
-
-</h3>
+        <h3>Mondays 3:15-4:15 p.m. - 12 weeks | Feb. 5, 12, 26, Mar. 5, 12, 19, 26, Apr. 16 23, 30, May 7, 14</h3>
       </div>
 
       <div class="border">
@@ -252,9 +255,7 @@
       </div>
 
       <div class="schedule">
-        <h3> SOLD OUT: Tuesdays 3:00-4:00 p.m. - 12 weeks
-Feb. 6, 20, 27, Mar. 6, 20, 27, Apr. 3, 10, 17, 24, May 1, 8
-        </h3>
+        <h3> SOLD OUT: Tuesdays 3:00-4:00 p.m. - 12 weeks Feb. 6, 20, 27, Mar. 6, 20, 27, Apr. 3, 10, 17, 24, May 1, 8</h3>
       </div>
 
       <div class="border">
@@ -272,13 +273,15 @@ Feb. 6, 20, 27, Mar. 6, 20, 27, Apr. 3, 10, 17, 24, May 1, 8
       </div>
 
       <div class="schedule">
-        <h3>4th grade+ Thursdays 3:30-4:30 p.m. - 12 weeks | Feb. 8, 22, Mar. 1, 8, 22, 29, Apr. 5, 12, 19, 26, May 3, 10
-        </h3>
+        <h3>4th grade+ Thursdays 3:30-4:30 p.m. - 12 weeks | Feb. 8, 22, Mar. 1, 8, 22, 29, Apr. 5, 12, 19, 26, May 3, 10</h3>
       </div>
-      </div>
-
-
-
     </div>
-  </body>
+    </div>
+    <footer>
+      <p>Chess America &copy; 2018</p>
+    </footer>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
+	<script src="js/main.js"></script>
+</body>
 </html>
