--- a/final_project/chesswebsite/about.html
+++ b/final_project/chesswebsite/about.html
@@ -20,19 +20,66 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
-<body>
-  <div class="wrapper">
+  <body>
+    <div class="wrapper">
+
     <header>
       <h1><a href="index.html">Chess America</a></h1>
     </header>
-    <nav>
-      <a href="about.html">About Us</a>
-      <a href="teacher.html">Teacher Application</a>
-      <a href="contact.html">Contact</a>
-      <a href="register.html">Register Now</a>
-    </nav>
-    <main>
-    </main>
+    <div id="arrowbutton"><i class="fas fa-align-justify fa-3x"></i></div>
+    <div class="bigNav">
+      <nav>
+        <a href="about.html">About Us</a>
+        <a href="teacher.html">Teacher Application</a>
+        <a href="contact.html">Contact</a>
+        <a href="register.html">Register Now</a>
+      </nav>
     </div>
+    <div class="container1">
+      <div class="info"><h3>Chess America is a family run business started in 2007.  Richard and
+        Heather Hornor are a Father-Daughter team who have a passion for spreading their love
+        of Chess! Chess America teaches chess nationwide in schools, chess camps, libraries,
+        and park districts. Many of the students of Chess America have
+         won or placed high in local, state and national chess tournaments.
+         Chess America provides chess classes given by local chess professionals
+         who share the passionate vision of Chess for all! All instructors undergo thorough background
+          checks, and are screened for their skills as teachers in addition
+          to their chess experience.</h3>
+      </div>
+    <div class="aboutGrid">
+      <div>
+        <img src="images/heather.gif" alt="Richard">
+        <button class="clubQ1">Heather Hornor, Program Director</button>
+        <!-- <h4>Click above to send an email to Heather about:</h4> -->
+
+      </div>
+      <div>
+        <img src="images/richard.gif" alt="Richard">
+        <button class="clubQ2">Richard Hornor, President</button>
+      </div>
+
+    </div>
+    <div class="modal-background1">
+    <div class="modal-clubQ1">
+      <h4><a href="mailto:heather@chessamerica.org">heather@chessamerica.org</a></h4>
+      <h4>Text: 972-697-9989</h4>
+      <button id="close1">Close</button>
+    </div>
+    </div>
+    <div class="modal-background2">
+    <div class="modal-clubQ2">
+      <h4><a href="mailto:richard@chessamerica.org">richard@chessamerica.org</a></h4>
+      <h4>Text: 972-697-9919</h4>
+      <button id="close2">Close</button>
+    </div>
+
+  </div>
+
+  </div>
+  <footer>
+    <p>Chess America &copy; 2018</p>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
+	<script src="js/main.js"></script>
 </body>
 </html>
