--- a/final_project/chesswebsite/contact.html
+++ b/final_project/chesswebsite/contact.html
@@ -26,15 +26,58 @@
     <header>
       <h1><a href="index.html">Chess America</a></h1>
     </header>
-    <nav>
-      <a href="about.html">About Us</a>
-      <a href="teacher.html">Teacher Application</a>
-      <a href="contact.html">Contact</a>
-      <a href="register.html">Register Now</a>
-    </nav>
+    <div id="arrowbutton"><i class="fas fa-align-justify fa-3x"></i></div>
+    <div class="bigNav">
+      <nav>
+        <a href="about.html">About Us</a>
+        <a href="teacher.html">Teacher Application</a>
+        <a href="contact.html">Contact</a>
+        <a href="register.html">Register Now</a>
+      </nav>
+    </div>
+    <div class="container1">
+      <h4>I would like to inquire about:</h4>
+    <div class="contactGrid">
+      <div>
+        <button class="clubQ1">My Current Chess Club</button>
+        <h4>Click above to email/text Heather about:</h4>
+        <h2>- Questions about registration or fees -</h2>
+        <h2>- Attendance, behavior, and student related concerns -</h2>
+        <h2>- Technical support regarding our website or online registraion -</h2>
 
-    <div class="registrationgrid">
+      </div>
+      <div>
+        <button class="clubQ2">Starting a new Chess Club</button>
+        <h4>Click above to email/text to Richard about:</h4>
+        <h2>- Developing a new Chess Club for your school -</h2>
+        <h2>- Adding Chess to your school's daily curriculum -</h2>
+        <h2>- Hosting a Summer Camp Chess Club at your school -</h2>
+      </div>
 
     </div>
-  </body>
+    <div class="modal-background1">
+    <div class="modal-clubQ1">
+      <h4>Heather Hornor, Program Director</h4>
+      <h4><a href="mailto:heather@chessamerica.org">heather@chessamerica.org</a></h4>
+      <h4>Text: 972-697-9989</h4>
+      <button id="close1">Close</button>
+    </div>
+    </div>
+    <div class="modal-background2">
+    <div class="modal-clubQ2">
+      <h4>Richard Hornor, President</h4>
+      <h4><a href="mailto:richard@chessamerica.org">richard@chessamerica.org</a></h4>
+      <h4>Text: 972-697-9919</h4>
+      <button id="close2">Close</button>
+    </div>
+
+  </div>
+
+  </div>
+  <footer>
+    <p>Chess America &copy; 2018</p>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
+	<script src="js/main.js"></script>
+</body>
 </html>
