--- a/final_project/chesswebsite/teacher.html
+++ b/final_project/chesswebsite/teacher.html
@@ -21,23 +21,29 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   </head>
   <body>
-  <div class="wrapper">
+    <div class="wrapper">
 
     <header>
       <h1><a href="index.html">Chess America</a></h1>
     </header>
-    <nav>
-      <a href="about.html">About Us</a>
-      <a href="teacher.html">Teacher Application</a>
-      <a href="contact.html">Contact</a>
-      <a href="register.html">Register Now</a>
-    </nav>
+    <div id="arrowbutton"><i class="fas fa-align-justify fa-3x"></i></div>
+    <div class="bigNav">
+      <nav>
+        <a href="about.html">About Us</a>
+        <a href="teacher.html">Teacher Application</a>
+        <a href="contact.html">Contact</a>
+        <a href="register.html">Register Now</a>
+      </nav>
+    </div>
 
     <div class="apply">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfuP28Bk5stxxoybcEbbu62-ciPmEadkXCd3SE4vw67faiZIA/viewform?embedded=true" width="90%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <footer>
+      <p>Chess America &copy; 2018</p>
     </footer>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
+  <script src="js/main.js"></script>
   </body>
 </html>
