--- a/final_project/chesswebsite/index.html
+++ b/final_project/chesswebsite/index.html
@@ -275,6 +275,126 @@
       <div class="schedule">
         <h3>4th grade+ Thursdays 3:30-4:30 p.m. - 12 weeks | Feb. 8, 22, Mar. 1, 8, 22, 29, Apr. 5, 12, 19, 26, May 3, 10</h3>
       </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="180.00" />
+          <input type="hidden" name="order_description" value="Queen Of Peace" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://www.chessamerica.org" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|44f7f8f5e801d32790ae7943652e4005" />
+          <input type="submit" name="submit" value="Queen of Peace Catholic Academy" />
+        </form>
+      </div>
+
+      <div class="schedule">
+        <h3>Thursdays 3:15-4:15 p.m. - 12 weeks | Feb. 1, 8, 15, 22, Mar. 1, 8, 15, 22, Apr. 12, 19, 26, May 3</h3>
+      </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="210.00" />
+          <input type="hidden" name="order_description" value="SWchristian" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://www.chessamerica.org" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|fa112ae19555086fb433610849d47f95" />
+          <input type="submit" name="submit" value="Southwest Christian School" />
+        </form>
+      </div>
+      <div class="schedule">
+        <h3>Fridays 4:00-5:00 p.m. - 12 weeks | Jan. 26, Feb. 2, 16, 23, Mar. 2, 9, 23, Apr. 6, 13, 20, May 4, 11</h3>
+      </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="215.00" />
+          <input type="hidden" name="order_description" value="St. George" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://www.chessamerica.org" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|48a47d89e502181e2fef86e8c4a47b64" />
+          <input type="submit" name="submit" value="St. George Episcopal School" />
+        </form>
+      </div>
+      <div class="schedule">
+        <h3>Wednesdays 3:30-4:30 p.m. - 12 weeks | Jan. 24, 31, Feb 7, 14, 21, 28;  Mar 7, 21, 28, Apr 4, 11, 18</h3>
+      </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="200.00" />
+          <input type="hidden" name="order_description" value="St. Mary's" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://chessamerica.org/" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|eb6ad5e2f2e12bd8929b6b558d750492" />
+          <input type="submit" name="submit" value="St. Mary's Academy" />
+        </form>
+      </div>
+      <div class="schedule">
+        <h3>Wednesdays 3:05 to 4:05 p.m. - 12 weeks | Jan. 31, Feb. 7, 14, 21, 28, Mar. 7, 14, 21, Apr. 4, 11, 18, 25</h3>
+      </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="230.00" />
+          <input type="hidden" name="order_description" value="Sunrise Park" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://www.chessamerica.org" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|f191ba8119b7d49ed354ffb5163dfaed" />
+          <input type="submit" name="submit" value="Sunrise Park Elementary" />
+        </form>
+      </div>
+      <div class="schedule">
+        <h3>Mondays 2:10-3:10 p.m. - 12 weeks | Oct. 23, 30, Nov. 6, 13, 27, Dec. 4, 11, 18, Jan. 22, 29, Feb. 5, 12</h3>
+      </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="200.00" />
+          <input type="hidden" name="order_description" value="valley ranch" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://www.chessamerica.org" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|cbdbe80d9dab07c290dc9c9c20b4a9fb" />
+          <input type="submit" name="submit" value="Valley Ranch Elementary" />
+        </form>
+      </div>
+      <div class="schedule">
+        <h3>Wednesdays 3:15-4:15 p.m. - 12 weeks | Feb. 7, 14, 21, 28, Mar. 7, 21, 28, Apr. 4, 11, 18, 25, May 2</h3>
+      </div>
+
+      <div class="border">
+        <form action="https://secure.merchantonegateway.com/cart/cart.php" method="POST">
+          <input type="hidden" name="key_id" value="2504804" />
+          <input type="hidden" name="action" value="process_fixed" />
+          <input type="hidden" name="amount" value="180.00" />
+          <input type="hidden" name="order_description" value="Western Christian" />
+          <input type="hidden" name="language" value="en" />
+          <input type="hidden" name="url_finish" value="http://www.chessamerica.org" />
+          <input type="hidden" name="customer_receipt" value="true" />
+          <input type="hidden" name="hash" value="action|amount|order_description|38f453f1abfaa08cd147225697846281" />
+          <input type="submit" name="submit" value="Western Christian School" />
+        </form>
+      </div>
+      <div class="schedule">
+        <h3>Wednesdays 3:30-4:30 p.m. - 12 weeks | Jan. 31, Feb. 7, 14, 21, 28, Mar. 7, 14, 21, 28, Apr. 11, 18, 25</h3>
+      </div>
     </div>
     </div>
     <footer>
