--- a/final_project/chesswebsite/teacher.html
+++ b/final_project/chesswebsite/teacher.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="author" content="Chess America">
-    <meta name="description" content="Professional Chess For Schools">
-    <meta name="keywords" content="chess, chess texas, chess houston, after school
-    chess, chess lessons, texas, summer camps, summer camp, summer chess camp, USCF,
-     USA Chess, United States Chess Federation, Chess Tournament, chess america,
-     chess club, chess clubs texas, chess clubs dallas, chess lessons,Kids Chess,
-     Chess for Kids, Kids Chess club, chesskids chess houton, chess club dallas,
-     chess club san diego, san diego, houston, dallas, denver, fort lauderdale,
-     miami, boca raton, new jersey">
-    <title>Chess America</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Didact+Gothic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="wrapper">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="author" content="Chess America">
+  <meta name="description" content="Professional Chess For Schools">
+  <meta name="keywords" content="chess, chess texas, chess houston, after school
+  chess, chess lessons, texas, summer camps, summer camp, summer chess camp, USCF,
+  USA Chess, United States Chess Federation, Chess Tournament, chess america,
+  chess club, chess clubs texas, chess clubs dallas, chess lessons,Kids Chess,
+  Chess for Kids, Kids Chess club, chesskids chess houton, chess club dallas,
+  chess club san diego, san diego, houston, dallas, denver, fort lauderdale,
+  miami, boca raton, new jersey">
+  <title>Chess America</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:700|Didact+Gothic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+</head>
+<body>
+  <div class="wrapper">
 
     <header>
       <h1><a href="index.html">Chess America</a></h1>
@@ -35,7 +35,7 @@
         <a href="register.html">Register Now</a>
       </nav>
     </div>
-    <div class="apply">
+    <div class="container1">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfuP28Bk5stxxoybcEbbu62-ciPmEadkXCd3SE4vw67faiZIA/viewform?embedded=true" width="90%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <footer>
@@ -44,5 +44,5 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
   <script src="js/main.js"></script>
-  </body>
+</body>
 </html>
