--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
 
       <h4>Click on your school below to register!</h4>
       <h4>All Major Credit/Debit Cards Accepted</h4>
-      <h2 class="border">SOLD OUT classes have no remaining seats. There is no waiting list. We look forward to seeing you next semester.</h2>
+      <h2>SOLD OUT classes have no remaining seats. There is no waiting list. We look forward to seeing you next semester.</h2>
       <br>
       <div class="registrationgrid">
         <div class="border">
@@ -401,7 +401,6 @@
       <p>Chess America &copy; 2018</p>
     </footer>
   </div>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> <!-- jQuery -->
   <script src="js/main.js"></script>
 </body>
